--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,61 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+body{
   margin: 0;
+  font-family: Arial, sans-serif;
+  background-color: rgba(13, 14, 38, 1);
+  color: white;
+  padding: 0px;
+}
+.message {
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  align-items: flex-start;
+  margin: 15px 0;
+  width: 100%;
+  flex-direction: column;
+  gap:5px 0
+}
+.main-container{
+  width: 33% !important;
+  background-color:  rgba(13, 14, 38, 1) !important;
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+  /* opacity: 0.8; */
+}
+.chat-ui{
+  height: 83vh;
+  opacity: 0.8;
+  overflow-y: auto;
+/* Hide scrollbar for Chrome, Safari and Opera */
+scrollbar-width: none; /* Firefox */
+-ms-overflow-style: none; /* IE and Edge */
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.chat-ui::-webkit-scrollbar {
+display: none; /* Chrome, Safari and Opera */
 }
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+.MuiTab-icon{
+  margin: 0 !important;
 }
-button:hover {
-  border-color: #646cff;
+button.Mui-selected{
+  background-color: rgb(255, 255, 255);
+    color: rgb(22, 26, 47) !important;
+    border-radius: 5px !important;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.tab-container{
+  min-height: unset !important;
+  background-color:  rgba(13, 14, 38, 1) !important;
+  padding: 10px !important;
+  position: relative !important;
 }
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.tab-btn{
+  min-height: unset !important;
+  min-width: unset !important;
+  padding: 5px 10px !important;
+  margin: 0px 5px !important;
+  display: flex !important;
+  flex-direction: row !important; 
+  text-transform: capitalize !important;
+  gap: 0 10px;
+  color: #fff !important;
 }
